# obs2ioda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pytest.ini
goes_abi/: CMakeLists.txt
goes_abi/src/: goes_abi_converter.f90  write_netcdf_obs_mod.f90
goes_abi/src/tests/: CMakeLists.txt  write_netcdf_obs.test.f90
ncar/obs2ioda/src/cxx/: CMakeLists.txt  netcdf_attribute.cc
obs2ioda-v2/: CMakeLists.txt  README.md
obs2ioda-v2/src/: Makefile  core_mod.f90  define_mod.f90  f_c_string_1D_t_mod.f90  f_c_string_i_mod.f90  f_c_string_t_mod.f90  get_signature.sh  gnssro_mod.f90  hsd.f90  main.f90  ncio_mod.f90  netcdf_cxx_i_mod.f90  netcdf_cxx_mod.f90  prepbufr_mod.f90  radiance_mod.f90  satwnd_mod.f90  setup_mod.f90  utils_mod.f90
obs2ioda-v2/src/cxx/: CMakeLists.txt  ioda_names.cc  ioda_names.h  ioda_obs_schema.cc  ioda_obs_schema.h  ioda_schema.cc  ioda_schema.h  netcdf_attribute.cc  netcdf_attribute.h  netcdf_c.h  netcdf_dimension.cc  netcdf_dimension.h  netcdf_error.cc  netcdf_error.h  netcdf_file.cc  netcdf_file.h  netcdf_get_variable.cc  netcdf_group.cc  netcdf_group.h  netcdf_utils.cc  netcdf_utils.h  netcdf_variable.cc  netcdf_variable.h
obs2ioda-v2/src/fortran/: define_mod.f90  f_c_double_1D_t_mod.f90  f_c_int_1D_t_mod.f90  f_c_numeric_mod.f90  f_c_real_1D_t_mod.f90  f_c_real_2D_t_mod.f90  f_c_string_1D_t_mod.f90  f_c_string_t_mod.f90  gnssro_mod.f90  linter.py  ncio_mod.f90  netcdf_c_i_mod.f90  netcdf_c_mod.f90  netcdf_cxx_i_mod.f90  netcdf_cxx_mod.f90  netcdf_mod.f90
obs2ioda-v2/src/test/: fortran_test_framework_mod.f90  test_utils.f90
obs2ioda-v3/: CMakeLists.txt  README.md
obs2ioda-v3/src/: define_mod.f90  goes_abi_converter.f90  goes_abi_converter_mod.f90  hsd.f90  kinds.f90  main.f90  ncio_mod.f90  netcdf_mod.f90  prepbufr_mod.f90  radiance_mod.f90  satwnd_mod.f90  ufo_variables_mod.F90  utils_mod.f90
obs2ioda-v3/src/cxx/: CMakeLists.txt  ioda_file_map.cc  ioda_file_map.h  ioda_group.cc  ioda_group.h  ioda_obs_schema.cc  ioda_obs_schema.h  ioda_obs_schema_map.cc  ioda_obs_schema_map.h  ioda_variable.cc  ioda_variable.h  netcdf_attribute.cc  netcdf_attribute.h  netcdf_dimension.cc  netcdf_file.cc  netcdf_file.h  netcdf_group.cc  netcdf_variable.cc  object_registry.h
obs2ioda-v3/src/cxx/ioda_attribute/: CMakeLists.txt  ioda_attribute.cc  ioda_attribute.h  ioda_attribute.test.cc
obs2ioda-v3/src/cxx/ioda_dimension/: CMakeLists.txt  ioda_dimension.cc  ioda_dimension.h  ioda_dimension.test.cc
obs2ioda-v3/src/cxx/ioda_group/: CMakeLists.txt  ioda_group.cc  ioda_group.h  ioda_group.test.cc
obs2ioda-v3/src/cxx/ioda_obs_schema/: CMakeLists.txt  ioda_obs_schema.h  ioda_obs_schema.test.cc
obs2ioda-v3/src/cxx/ioda_obs_schema_map/: CMakeLists.txt  ioda_obs_schema_map.cc  (+2 more)
obs2ioda-v3/src/tests/: CMakeLists.txt  ioda_v1_to_v3.test.f90
src/cxx/: CMakeLists.txt  hsd.cc  hsd.h  ioda_obs_schema.cc  ioda_obs_schema.h  missing_value.cc  missing_value.h  netcdf_attribute.cc  netcdf_dimension.cc  netcdf_error.h  netcdf_file.cc  netcdf_group.cc  netcdf_utils.cc  netcdf_utils.h  netcdf_variable.cc  netcdf_variable.h
src/cxx/test/: CMakeLists.txt  netcdf_dimension.test.cc
src/tests/: CMakeLists.txt  write_ioda_v3.test.f90
test/: CMakeLists.txt  README.md
test/cmake/: Obs2Ioda_Test_Functions.cmake
test/cxx/: CMakeLists.txt  calc_solar_zenith_angle.test.cpp  ioda_obs_schema.test.cc  missing_value.test.cc  netcdf_attribute.test.cc  netcdf_dimension.test.cc  netcdf_group.test.cc  netcdf_satwind_test.cc  netcdf_test.cc  netcdf_test_fixture.cc  netcdf_test_fixture.h  netcdf_variable.test.cc  set_netcdf_group.test.cc  test_netcdf_cxx_attributes.cc
test/cxx/fixture/: IodaObsSchemaFixture.cc  IodaObsSchemaFixture.h  NetcdfCxxAttributeFixture.cc  NetcdfCxxAttributeFixture.h
test/fortran/: CMakeLists.txt  Test_f_c_double_1D_t_mod.pf  Test_f_c_int_1D_t_mod.pf  Test_f_c_real_1D_t_mod.pf  Test_f_c_real_2D_t_mod.pf  Test_f_c_string_1D_t_mod.pf  Test_f_c_string_t_mod.pf  Test_foo_mod.pf  Test_fortran_test_framework_driver.f90  Test_fortran_test_framework_mod.f90  Test_netcdf_add_dim_mod.pf  Test_netcdf_add_group_mod.pf  Test_netcdf_att_mod.pf  Test_netcdf_create.f90  Test_netcdf_create_mod.f90  Test_netcdf_create_mod.pf  Test_netcdf_fixture_t_mod.f90  Test_netcdf_fixture_t_mod.pf  Test_netcdf_mod.pf  Test_netcdf_var_mod.pf  calc_solar_zenith_angle.test.f90  compute_bt_superob.test.f90  f_c_string.test.cpp  f_c_string.test.h  f_c_string_array_t.test.f90  f_c_string_t.test.f90  f_c_string_trim_test.f90  float_comparison.test.f90  get_julian_time.test.f90  netcdf_attribute_test.f90  netcdf_file_test.f90  netcdf_test_utils_mod.f90  netcdf_variable_test.f90  set_datetime.test.f90  set_goes_abi_out_fname.test.f90  test_calc_solar_zenith_angle_mod.pf  test_compute_bt_superob_mod.pf  test_f_c_string_array_t_mod.pf  test_f_c_string_t_mod.pf  test_get_julian_time_mod.pf  (+11 more)
test/fortran/f_c_string/: Test_f_c_string.c  Test_f_c_string.h  Test_f_c_string_i_mod.f90  Test_f_c_string_t_1D_double_string_double_instance_mixed_driver.f90  Test_f_c_string_t_1D_double_string_single_instance_driver.f90  Test_f_c_string_t_1D_mod.f90  Test_f_c_string_t_1D_single_string_double_instance_driver.f90  Test_f_c_string_t_1D_single_string_single_instance_driver.f90  Test_f_c_string_t_driver.f90  Test_f_c_string_t_mod.f90
test/fortran/f_c_string_t/: Test_f_c_string_t_1D_mod.f90  Test_f_c_string_t_driver.f90  Test_f_c_string_t_mod.f90
test/fortran/fortran_test_framework/: Test_fortran_test_framework_driver.f90
test/integration/: CMakeLists.txt  check_attributes.cc  check_groups.cc  check_variables.cc  run_obs2ioda.cc  utils.h
test/obs2ioda_ext/: CMakeLists.txt  netcdf_cxx_get_variable_i_mod.f90  netcdf_cxx_get_variable_mod.f90  netcdf_get_variable.cc  netcdf_get_variable.h
test/utils/: CMakeLists.txt  test_utils.f90
test/validation/: CMakeLists.txt  conftest.py  test_goes_abi.py  test_goes_abi_converter.py  test_ncep_prepbufr_bufr.py  test_obs2ioda.py  write_goes_abi_ioda_v3.test.f90
test/validation/test_utils/: base_suite.py  goes_abi_suite.py  ncep_prepbufr_bufr_suite.py  utils.py
(+57 files in other folders)
